--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -17,12 +17,12 @@
     <input type="text" id="origin1" placeholder="RDU">
     <input type="text" id="origin2" placeholder="SFO">
   </div>
-  <button onclick="run()">Find flights</button>
-  <h4 id="found">{{ found }}</h4>
-  <h4 id="notfound">{{ notfound }}</h4>
+  <button onclick="runSearch()" id="search">Find flights</button>
+  <h4 class="status"><span>{{ status1 }}</span>{{ found }}</h4>
+  <h4 class="status"><span>{{ status2 }}</span>{{ notfound }}</h4>
   
-  <ul class="searchResults">
-    {{#each searchResults}}
+  <ul class="flightResults">
+    {{#each flightResults}}
       <li>
         <span class="destination">{{ destination }}:</span>
         <span class="price">{{ price }}</span>
