--- a/css/style.css
+++ b/css/style.css
@@ -3,23 +3,76 @@
   padding: 0; }
 
 body {
-  font-family: 'Rubik', sans-serif;
-  background: lightseagreen; }
+  font-family: "Rubik", sans-serif;
+  background: #aff0f0; }
 
 .container {
-  padding: 10%;
+  padding-top: 80px;
   width: 80%;
-  margin: 0 auto; }
-
-.status h4 {
-  font-size: 18px; }
-
-ul {
-  margin: 40px auto;
-  width: 60%;
-  list-style-type: none; }
-  ul li {
-    background: white;
-    border-radius: 10px;
-    margin: 10px auto;
-    padding: 10px; }
+  margin: 0 auto;
+  text-align: center;
+  vertical-align: middle; }
+  .container #header {
+    font-weight: 600;
+    font-size: 36px;
+    margin: 20px 0; }
+  .container #subheader {
+    font-weight: 400; }
+  .container .inputs {
+    margin: 40px 0; }
+    .container .inputs input, .container .inputs button {
+      padding: 16px 8px;
+      border-radius: 10px;
+      border: none;
+      font-size: 18px;
+      margin-right: 8px; }
+    .container .inputs input:focus {
+      outline: none; }
+    .container .inputs button {
+      padding: 16px;
+      letter-spacing: 1px;
+      font-weight: 600;
+      text-transform: uppercase;
+      background-color: #1e3dec;
+      color: white; }
+      .container .inputs button:hover {
+        cursor: pointer;
+        opacity: .92; }
+  .container .status h4 {
+    font-size: 18px;
+    font-weight: 300;
+    text-align: center;
+    margin: 4px 0; }
+  .container #flightResults {
+    text-align: left;
+    font-size: 20px;
+    margin: 40px auto;
+    width: 60%;
+    list-style-type: none; }
+    .container #flightResults li {
+      background: white;
+      border-radius: 10px;
+      margin: 10px auto;
+      padding: 16px; }
+    .container #flightResults li.success .destination {
+      font-weight: 600; }
+    .container #flightResults li.success .price {
+      font-weight: 300;
+      margin-left: 10px; }
+    .container #flightResults li.success .button {
+      display: block;
+      float: right;
+      color: #1e3dec;
+      font-size: 16px;
+      padding: 4px;
+      visibility: hidden; }
+    .container #flightResults li.success:hover {
+      cursor: pointer;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15); }
+      .container #flightResults li.success:hover .button {
+        visibility: visible; }
+    .container #flightResults li.failed {
+      background: rgba(255, 255, 255, 0.6); }
+      .container #flightResults li.failed .price {
+        opacity: .6;
+        margin-left: 10px; }
