--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,32 +1,101 @@
+// Variables
+$font: 'Rubik', sans-serif;
+
 * {
   margin: 0;
   padding: 0;
 }
 
 body {
-  font-family: 'Rubik', sans-serif;
-  background: lightseagreen;
+  font-family: $font;
+  background: rgb(175, 240, 240);
 }
 
 .container {
-  padding: 10%; width: 80%; margin: 0 auto;
-}
-
-.status {
-  h4 {
-    font-size: 18px;
+  padding-top: 80px; width: 80%; margin: 0 auto; text-align: center; vertical-align: middle;
+  #header {
+    font-weight: 600;
+    font-size: 36px;
+    margin: 20px 0;
   }
-}
-
-ul {
-  margin: 40px auto;
-  width: 60%;
-  list-style-type: none;
-
-  li {
-    background: white;
-    border-radius: 10px;
-    margin: 10px auto;
-    padding: 10px;
+  #subheader {
+    font-weight: 400;
+  }
+  .inputs {
+    margin: 40px 0;
+    input, button {
+      padding: 16px 8px;
+      border-radius: 10px;
+      border: none;
+      font-size: 18px;
+      margin-right: 8px;
+    }
+    input:focus {
+      outline: none;
+    }
+    button {
+      padding: 16px;
+      letter-spacing: 1px;
+      font-weight: 600;
+      text-transform: uppercase;
+      background-color: rgb(30, 61, 236);
+      color: white;
+      &:hover {
+        cursor: pointer;
+        opacity: .92;
+      }
+    }
+  }
+  .status {
+    h4 {
+      font-size: 18px;
+      font-weight: 300;
+      text-align: center;
+      margin: 4px 0;
+    }
+  }
+  #flightResults {
+    text-align: left;
+    font-size: 20px;
+    margin: 40px auto;
+    width: 60%;
+    list-style-type: none;
+    li {
+      background: white;
+      border-radius: 10px;
+      margin: 10px auto;
+      padding: 16px;
+    }
+    li.success {
+      .destination {
+        font-weight: 600;
+      }
+      .price {
+        font-weight: 300;
+        margin-left: 10px;
+      }
+      .button {
+        display: block;
+        float: right;
+        color: rgb(30, 61, 236);
+        font-size: 16px;
+        padding: 4px;
+        visibility: hidden;
+      }
+      &:hover {
+        cursor: pointer;
+        box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+        .button {
+          visibility: visible;
+        }
+      }
+    }
+    li.failed {
+      background: rgba(255, 255, 255, 0.6);
+      .price {
+        opacity: .6;
+        margin-left: 10px;
+      }
+    }
   }
 }
