--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>flight calculator</title>
+  <title>We Fly Cheap</title>
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,600" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-  <script src="calculator.js"></script>
+  <script src="runsearch.js"></script>
 </head>
 <body>
   <div class="container">
