--- a/css/style.css
+++ b/css/style.css
@@ -12,68 +12,96 @@ body {
   margin: 0 auto;
   text-align: center;
   vertical-align: middle; }
-  .container #header {
-    font-weight: 600;
-    font-size: 36px;
-    margin: 20px 0; }
-  .container #subheader {
-    font-weight: 400; }
-  .container .inputs {
-    margin: 40px 0; }
-    .container .inputs input, .container .inputs button {
-      padding: 16px 8px;
-      border-radius: 10px;
-      border: none;
-      font-size: 18px;
-      margin-right: 8px;
-      text-transform: uppercase; }
-    .container .inputs input:focus {
-      outline: none; }
-    .container .inputs button {
-      padding: 16px;
-      letter-spacing: 1px;
-      font-weight: 600;
-      text-transform: uppercase;
-      background-color: #1e3dec;
-      color: white; }
-      .container .inputs button:hover {
-        cursor: pointer;
-        opacity: .92; }
-  .container .status h4 {
+  @media screen and (max-width: 480px) {
+    .container {
+      padding-top: 5vh;
+      width: 90%;
+      text-align: left;
+      float: none; } }
+
+#header {
+  font-weight: 600;
+  font-size: 36px;
+  margin: 20px 0; }
+  @media screen and (max-width: 480px) {
+    #header {
+      font-size: 30px; } }
+
+#subheader {
+  font-weight: 400; }
+
+.inputs {
+  margin: 40px 0;
+  text-align: center; }
+  .inputs input, .inputs button {
+    padding: 16px 8px;
+    border-radius: 10px;
+    border: none;
     font-size: 18px;
-    font-weight: 300;
-    text-align: center;
-    margin: 4px 0; }
-  .container #flightResults {
-    text-align: left;
-    font-size: 20px;
-    margin: 40px auto;
-    width: 60%;
-    list-style-type: none; }
-    .container #flightResults li {
-      background: white;
-      border-radius: 10px;
-      margin: 10px auto;
-      padding: 16px; }
-    .container #flightResults li.success .destination {
+    margin-right: 8px;
+    text-transform: uppercase; }
+    @media screen and (max-width: 480px) {
+      .inputs input, .inputs button {
+        margin: 8px 0;
+        width: 80%; } }
+  .inputs input:focus {
+    outline: none; }
+  .inputs button {
+    letter-spacing: 1px;
+    font-weight: 600;
+    text-transform: uppercase;
+    background-color: #1e3dec;
+    color: white; }
+    @media screen and (max-width: 480px) {
+      .inputs button {
+        padding-left: 24px;
+        padding-right: 24px;
+        width: auto; } }
+    .inputs button:hover {
+      cursor: pointer;
+      opacity: .92; }
+
+.status h4 {
+  font-size: 18px;
+  font-weight: 300;
+  text-align: center;
+  margin: 4px 0; }
+
+#flightResults {
+  text-align: left;
+  font-size: 20px;
+  margin: 40px auto;
+  width: 60%;
+  list-style-type: none; }
+  @media screen and (max-width: 480px) {
+    #flightResults {
+      width: 100%; } }
+  #flightResults li {
+    background: white;
+    border-radius: 10px;
+    margin: 10px auto;
+    padding: 16px; }
+  #flightResults li.success {
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.16); }
+    #flightResults li.success .destination {
       font-weight: 600; }
-    .container #flightResults li.success .price {
+    #flightResults li.success .price {
       font-weight: 300;
       margin-left: 10px; }
-    .container #flightResults li.success .button {
+    #flightResults li.success .button {
       display: block;
       float: right;
       color: #1e3dec;
       font-size: 16px;
       padding: 4px;
       visibility: hidden; }
-    .container #flightResults li.success:hover {
+    #flightResults li.success:hover {
       cursor: pointer;
-      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15); }
-      .container #flightResults li.success:hover .button {
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.24); }
+      #flightResults li.success:hover .button {
         visibility: visible; }
-    .container #flightResults li.failed {
-      background: rgba(255, 255, 255, 0.6); }
-      .container #flightResults li.failed .price {
-        opacity: .6;
-        margin-left: 10px; }
+  #flightResults li.failed {
+    background: rgba(255, 255, 255, 0.6); }
+    #flightResults li.failed .price {
+      opacity: .6;
+      margin-left: 10px; }
