--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,7 +12,7 @@
 // Responsive styling
 @mixin breakpoint($point) {
   @if $point == m {
-    @media screen and (max-width: 1024px){@content;}
+    @media screen and (max-width: 1100px){@content;}
   }
   @if $point == s {
     @media screen and (max-width: 480px){@content;}
@@ -20,10 +20,12 @@
 }
 
 // Global style variables
-$font: 'Rubik', sans-serif;
+$font: 'Muli', sans-serif;
 $primaryColor: rgb(30, 61, 236);
 @mixin textPadding(){padding: 16px 8px;}
 @mixin borderRadius(){border-radius: 10px;}
+@mixin fontRegular(){font-weight: 400;}
+@mixin fontBold(){font-weight: 800;}
 
 ////////////////////////////////////////////////////////////////
 
@@ -32,29 +34,49 @@ body {
   background: rgb(175, 240, 240);
 }
 
+h3 {
+  font-size: 17px;
+}
+
 .container {
   padding-top: 80px; width: 80%; margin: 0 auto; text-align: center; vertical-align: middle;
-  @include breakpoint(s){padding-top: 5vh; width: 90%; text-align: left; float: none;}
+  @include breakpoint(s){padding-top: 4vh; width: 90%; text-align: left; float: none;}
 }
 
 #header {
-  font-weight: 600;
-  font-size: 36px;
+  @include fontBold();
+  font-size: 48px;
   margin: 20px 0;
-  @include breakpoint(s){font-size: 30px;}
+  @include breakpoint(s){font-size: 36px;}
 }
 
 #subheader {
-  font-weight: 400;
+  @include fontRegular();
 }
 
 .inputs {
-  margin: 40px 0; text-align: center;
+  margin: 64px 0; text-align: center;
+  @include breakpoint(s){margin: 24px 0; text-align: left;}
+  .date, .origin1, .origin2 {
+    text-align: left; display: inline-block; margin-bottom: 24px;
+    @include breakpoint(m){min-width: 200px;}
+    @include breakpoint(s){width: 100%; margin: 0;}
+  }
+  h3 {
+    margin-bottom: 4px;
+    @include breakpoint(s){margin: 12px 0 2px;}
+  }
+  .origin2 {
+    h3 {
+      display: inline-block; margin-right: 8px;
+      @include breakpoint(s){width: 100%; margin: 0;}
+    }
+  }
   input, button {
     @include textPadding();
     @include borderRadius();
     border: none;
-    font-size: 18px;
+    font-size: 17px;
     margin-right: 8px;
     text-transform: uppercase;
     @include breakpoint(s){margin: 8px 0; width: 80%;}
@@ -63,12 +85,13 @@ body {
     outline: none;
   }
   button {
-    letter-spacing: 1px;
-    font-weight: 600;
+    letter-spacing: 1.2px;
     text-transform: uppercase;
     background-color: $primaryColor;
     color: white;
-    @include breakpoint(s){padding-left: 24px; padding-right: 24px; width: auto;}
+    margin-right: none;
+    @include breakpoint(m){width: auto;}
+    @include breakpoint(s){padding-left: 24px; padding-right: 24px; width: auto; margin-bottom: 32px;}
     &:hover {
       cursor: pointer;
       opacity: .92;
@@ -76,21 +99,18 @@ body {
   }
 }
 
-.status {
-  h4 {
-    font-size: 18px;
-    font-weight: 300;
-    text-align: center;
-    margin: 4px 0;
-  }
-}
-
 #flightResults {
   text-align: left;
   font-size: 20px;
-  margin: 40px auto;
-  width: 60%;
+  margin: 32px auto;
   list-style-type: none;
+  width: 60%;
+  .status > p {
+    font-size: 14px;
+    text-align: left;
+    padding-bottom: 12px;
+  }
+  @include breakpoint(m){width: 80%;}
   @include breakpoint(s){width: 100%;}
   li {
     background: white;
@@ -101,10 +121,9 @@ body {
   li.success {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.16);
     .destination {
-      font-weight: 600;
+      @include fontBold();
     }
     .price {
-      font-weight: 300;
       margin-left: 10px;
     }
     .button {
@@ -124,10 +143,9 @@ body {
     }
   }
   li.failed {
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(255, 255, 255, 0.7);
     .price {
-      opacity: .6;
-      margin-left: 10px;
+      opacity: .7;
     }
   }
 }
