--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>We Fly Cheap</title>
-  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,600" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Muli:400,800" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="runsearch.js"></script>
@@ -13,20 +13,28 @@
 <body>
   <div class="container">
     <h1 id="header">{{ header }}</h1>
-    <h3 id="subheader">{{ subheader }}</h1>
+    <h3 id="subheader">{{ subheader }}</h3>
     <div class="inputs">
-      <input type="text" id="date" placeholder="yyyy-mm-dd" value="{{ inputDate }}">
-      <input type="text" id="origin1" placeholder="RDU" value="{{ inputOrigin1 }}">
-      <input type="text" id="origin2" placeholder="SFO" value="{{ inputOrigin2 }}">
+      <div class="date">
+        <h3>Date:</h3>
+        <input type="text" id="date" placeholder="yyyy-mm-dd" value="{{ inputDate }}">
+      </div>
+      <div class="origin1">
+        <h3>Leaving from:</h3>
+        <input type="text" id="origin1" placeholder="RDU" value="{{ inputOrigin1 }}">
+      </div>
+      <div class="origin2">
+        <h3>&</h3>
+        <input type="text" id="origin2" placeholder="SFO" value="{{ inputOrigin2 }}">
+      </div>
       <button onclick="runSearch()" id="search">Find flights</button>
     </div>
     
-    <div class="status">
-      <h4 id="found">{{ found }}</h4>
-      <h4 id="notfound">{{ notfound }}</h4>
-    </div>
-    
     <ul id="flightResults">
+      <div class="status">
+        <p id="found">{{ found }}</p>
+        <p id="notfound">{{ notfound }}</p>
+      </div>
       {{#each flightResults}}
         {{#if success}}
           <li class="success" href="{{ link }}">
