--- a/scss/style.scss
+++ b/scss/style.scss
@@ -121,17 +121,24 @@ h3 {
   li.success {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.16);
     .destination {
-      @include fontBold();
+			@include fontBold();
+			float: left;
     }
     .price {
-      margin-left: 10px;
-    }
+			margin-left: 10px;
+			float: left;
+		}
+		.details {
+			margin-left: 24px;
+			font-size: 14px;
+			opacity: .7;
+			display: inline-block;
+		}
     .button {
       display: block;
       float: right;
       color: $primaryColor;
-      font-size: 16px;
-      padding: 4px;
+      font-size: 17px;
       visibility: hidden;
     }
     &:hover {
