--- a/scss/style.scss
+++ b/scss/style.scss
@@ -111,7 +111,7 @@ h3 {
     padding-bottom: 12px;
   }
   @include breakpoint(m){width: 80%;}
-  @include breakpoint(s){width: 100%;}
+  @include breakpoint(s){width: 100%; font-size: 17px;}
   li {
     background: white;
     border-radius: 10px;
@@ -134,6 +134,7 @@ h3 {
 			font-size: 14px;
 			opacity: .7;
 			display: inline-block;
+			@include breakpoint(s){margin-left: 6px;}
 		}
     .button {
       display: block;
