update runsearch.js and html to include sorting by price

--- a/css/style.css
+++ b/css/style.css
@@ -99,9 +99,11 @@ h3 {
   text-align: left;
   font-size: 20px;
   margin: 32px auto;
-  list-style-type: none;
   width: 60%; }
-  #flightResults .status > p {
+  #flightResults ul {
+    list-style-type: none;
+    margin-bottom: 32px; }
+  #flightResults .status {
     font-size: 14px;
     text-align: left;
     padding-bottom: 12px; }
