--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -31,32 +31,34 @@
       <button onclick="runSearch()" id="search">Find flights</button>
     </div>
     
-    <ul id="flightResults">
-      <div class="status">
-        <p id="found">{{ found }}</p>
-        <p id="notfound">{{ notfound }}</p>
-      </div>
-      {{#each flightResults}}
-        {{#if success}}
-          <li class="success" href="{{ link }}">
-            <span class="price">{{ price }}</span>
-						<span class="destination">to {{ destination }}</span>
-						{{#each details}}
-							<br><span class="details">{{ price }} {{ origin }}</span>
-						{{/each}}
-            <span class="button">View flights</span>
-          </li>
-        {{/if}}
-      {{/each}}
-      {{#each flightResults}}
-        {{#unless success}}
-          <li class="failed" href="{{ link }}">
-            <span class="destination">To {{ destination }}:</span>
-            <span class="price">{{ price }}</span>
-          </li>
-        {{/unless}}
-      {{/each}}
-    </ul>
+    <div id="flightResults">
+			<p class="status" id="found">{{ found }}</p>
+			<ul class="sort">
+				{{#each flightResults}}
+					{{#if success}}
+						<li class="success" data-price="{{ price }}" href="{{ link }}">
+							<span class="price">${{ price }}</span>
+							<span class="destination">to {{ destination }}</span>
+							{{#each details}}
+								<br><span class="details">{{ price }} {{ origin }}</span>
+							{{/each}}
+							<span class="button">View flights</span>
+						</li>
+					{{/if}}
+				{{/each}}
+			</ul>
+			<p class="status" id="notfound">{{ notfound }}</p>
+			<ul>
+				{{#each flightResults}}
+					{{#unless success}}
+						<li class="failed" href="{{ link }}">
+							<span class="destination">To {{ destination }}:</span>
+							<span class="price">{{ price }}</span>
+						</li>
+					{{/unless}}
+				{{/each}}
+			</ul>
+    </div>
   </div>
 </body>
 </html>
